# pthread

./: 3-BertognaBIS.c  CMakeLists.txt  README.md  a.out  distributore_aranciata.c  lettori_scrittori.c  mioproblema.c  morra_cinese.c  mybarbier  mybarbier.c  mythreadex.c
Sistemi_Embedded/: 3-Bertogna.c  3-BertognaBIS.c  es5_Stefano.c  es7_barbieri.c  ese22.c  ese_22.c  incorcio_out.txt  incrcocio_semplificato_out.txt  incrocio_semplificato.c  incrocio_stradale.c  morra_cinese.c  morra_cinese_cond.c  supermarket.c  supermarket_cond.c  supermermarket_full_cond.c  votazioni(es5).c
Sistemi_Embedded/1-14/: es3_prova.c  es8_Erika.c  ese13.c  ese14.c  ese3_ex_lino.c  ese3_prof.c  ese3_soluzione.c  ese7.c  ese7_cond.c  ese7_sem.c  ese8.c  ese8_git.c  ese9.c
Sistemi_Embedded/15-23/: es15Andrea.c  ese15.c  ese16.c  ese17.c  ese18.c  ese18_Andrea.c  ese19.c  ese19_And.c  ese19_MIO.c  ese20.c  ese21.c  ese22.c  ese22B.c  ese23.c
Sistemi_Embedded/2/: ese2-v2.c  ese2cond.c  ese2p2.c  myese2.c  (+1 more)
ese_OSD/: cannibali.c  fumatori.c  gestore_licenze.c  gestore_risorse.c  lettori-scrittori_cond_var.c  lettori_scrittori.c  mensa.c  mensa_ciclo.c  mensa_ciclo_output.txt  mensa_leonardi.c  molecole.c  molecole_cond.c  produttore-consumatore1.c  produttori-cons-con-struct.c  produttori-consumatori_13_11.c  proposta_ese_tesina.txt
internet/: banche.c  barbiere_addormentato.c  barbiere_cond.c  distributore_aranciata.c  fornaio.c  mioproblema.c  morra_cinese.c  morra_cinese_cond.c
modelli_generali/: leonardi.c  mailbox.c  mailbox_prio.c  mailbox_sem.c
varie/: prove.c  prove2.c  prove3.c
(+55 files in other folders)
